# nj-ctc-increase

./: .gitignore  Makefile  README.md  pyproject.toml  reform_combined.json  reform_ctc.json  reform_eitc.json  reform_prior_law.json
frontend/: next.config.js  package-lock.json  package.json  vercel.json
frontend/__tests__/: AggregateImpact.test.tsx  PolicyOverview.test.tsx
frontend/app/: layout.tsx  robots.ts  sitemap.ts
frontend/app/(shell)/: page.tsx
frontend/components/: AggregateImpact.tsx  CongressionalDistrictImpact.tsx  DynamicDistrictMap.tsx  ExampleHouseholds.tsx  ImpactAnalysis.tsx  MapTypeToggle.tsx  PolicyOverview.tsx  USDistrictChoroplethMap.tsx
frontend/hooks/: useAggregateImpact.ts
frontend/lib/: api.ts  embedding.ts  household.ts  modalApi.ts  types.ts
frontend/public/data/: congressional_districts.csv  congressional_districts_combined.csv  congressional_districts_ctc.csv  congressional_districts_eitc.csv  distributional_impact.csv  distributional_impact_combined.csv  distributional_impact_ctc.csv  distributional_impact_eitc.csv  example_households.json  income_brackets.csv  income_brackets_combined.csv  income_brackets_ctc.csv  income_brackets_eitc.csv  metrics.csv  metrics_ctc.csv  (+6 more)
nj_credit_calc/: __init__.py  household.py  microsimulation.py  reforms.py
scripts/: _pipeline_worker.py  build_populace_nj_slice.py  compute_example_households.py  compute_impacts.py  modal_district_pipeline.py  modal_household_endpoint.py  modal_pipeline.py  pipeline.py
tests/: __init__.py  conftest.py  test_csv_data.py  test_household.py  test_reforms.py
