[project]
name = "nj-ctc-increase"
version = "1.0.0"
description = "Enacted New Jersey CTC increase calculator and data pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 1.768.2 is the first release containing PR #8971 (the enacted
    # NJ CTC increase); matches POLICYENGINE_US_PIN in the Modal scripts.
    "policyengine-us==1.768.2",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["nj_credit_calc"]
